--- a/_posts/0000-01-02-dilipkn007.md
+++ b/_posts/0000-01-02-dilipkn007.md
@@ -2,5 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Wow it's great learning GitHub (❁´◡`❁)
+
 Use the left arrow to go back!
